fix(css): align with figma

--- a/css/style.css
+++ b/css/style.css
@@ -48,13 +48,11 @@ p {
 .col.flex {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 /* --- Profile img, name, name tag --- */
 
 .avatar-img {
-  margin: 0.5px 0;
   height: 48px;
   width: 48px;
   border-radius: 48px;
